css/index-combined-navigation-autoplay-final.css
/* ... */
/* Play Icon */
.autoplay-toggle .play-icon {
  opacity: 1; /* Visible by default */
  transform: translate(-50%, -50%) translateX(2px);
}

/* Pause Icon */
.autoplay-toggle .pause-icon {
  opacity: 0;
  transform: translate(-50%, -50%) translateX(1px);
}

/* When Playing, show Pause Icon and hide Play Icon */
.autoplay-toggle.playing .play-icon {
  opacity: 0; /* Hide Play icon */
}

.autoplay-toggle.playing .pause-icon {
  opacity: 1; /* Show Pause icon */
}

/* SVG Paths */
.autoplay-toggle .icon polygon,
.autoplay-toggle .icon rect {
  fill: white;
}

/* Hide Play/Pause Button on Non-Active Slides */
.swiper-slide:not(.swiper-slide-active) .autoplay-toggle {
  display: none;
}

.number-of-items-btn {
  display: flex;
  justify-content: center;
  align-items: center;
  padding: 0 2px;
  height: 28px;
  background-color: rgba(0, 0, 0, 0.3);
  border-radius: 14px;
  position: absolute;
  right: 9px;
  border: none;
}

.number-of-items-text {
  color: white;
  letter-spacing: 0.09rem;
  padding-right: 8px;
  padding-left: 8px;
  text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5),
    /* Primary shadow */ 2px 2px 4px rgba(0, 0, 0, 0.3),
    /* Secondary shadow */ 0px 0px 5px rgba(0, 0, 0, 0.25); /* Glow effect */
}

/* Layout of Images */
.swiper-slide img {
  display: block;
  width: 100%;
}

.portrait-img {
  height: 100svh;
  max-height: 100svh;
  width: auto;
  object-fit: cover;
  object-position: center 25%;
  display: block;
}

.landscape-img {
  width: 100vw;
  height: auto;
  max-height: 100svh;
  object-fit: contain;
  display: block;
}

/* Youtube Videos Layout */
.youtube-video-iphone-image-container {
  position: relative;
  width: 100%;
  max-width: 100vw;
  display: flex;
  justify-content: center;
  align-items: center;
}

.youtube-portrait {
  max-height: 90svh;
  height: auto;
  width: auto;
  max-width: 100%;
  object-fit: contain;
  margin: 0 auto;
}

.youtube-landscape {
  width: 80vw;
  min-width: 100vw;
  height: auto;
  max-width: none;
  object-fit: contain;
}

.centered-video_play-icon {
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  width: 68px;
  height: 68px;
  opacity: 0.9;
  object-fit: contain;
  cursor: pointer;
}

/* Layout for a Link item */
.link-img {
  width: 100%;
  height: auto;
  max-height: 55svh;
  object-fit: cover;
  display: block;
  position: fixed;
  left: 0;
  right: 0;
  margin: 0 auto;
}

.link-container {
  background-color: black;
  width: 100vw;
  position: relative;
  padding-left: 20px;
  margin-top: calc(55svh);
  height: calc(100svh - 55svh);
  overflow-y: auto;
}

.link-title,
.link-description {
  text-align: left;
  color: white;
  padding-right: 20px;
  margin-left: 4px;
}

.link-title {
  font-weight: bold;
  letter-spacing: 0.3px;
  margin-top: 3svh;
  margin-bottom: 1rem;
}

.link-description {
  letter-spacing: 0.3px;
  line-height: 1rem;
  color: rgb(218, 218, 218);
}

.link-clickable-text-wrapper {
  margin-top: 20px;
  margin-bottom: 16px;
}

.link-clickable-text {
  display: inline;
  text-decoration: none;
  text-transform: uppercase;
  color: rgb(128, 128, 128);
  margin-left: 4px;
  letter-spacing: 0.1px;
}

.link-btn-row {
  display: flex;
  align-items: center;
  gap: 8px;
  flex-wrap: nowrap;
}

/* Button on link to Open link */
.link-button {
  display: inline-flex;
  align-items: center;
  border: 1px solid #696969;
  padding: 2px 16px 2px 9px;
  text-decoration: none;
  color: white;
  background: none;
  cursor: pointer;
  gap: 5px;
  max-width: 118px;
  white-space: nowrap;
  margin-left: 4px;
}

.button-icon {
  width: 16px;
  height: 16px;
  object-fit: contain;
}

/* Prevents double-tap zoom, but still allow taps and swipes.  The double tap zoom was causing iOS devices to get stuck on a zoom size.  */
.left-arrow-btn,
.right-arrow-btn,
.down-arrow-btn,
.swiper {
  touch-action: manipulation;
}

/* Arrows for navigation of slides.  Note the up-arrow-btn is always hidden and we only use down-arrow-btn to navigate slides, but creates problems with swiper vertical functionality when removing up-arrow-btn. */
.left-arrow-btn,
.right-arrow-btn,
.down-arrow-btn,
.up-arrow-btn {
  display: flex;
  justify-content: center;
  align-items: center;
  background-color: rgba(0, 0, 0, 0.3);
  opacity: 1;
  border-radius: 50%;
  cursor: pointer;
  border: none;
  background-repeat: no-repeat;
  touch-action: manipulation; /* Prevent zooming and double-tap issues */
  -webkit-touch-callout: none; /* Disable callout (copy menu) on long press */
  user-select: none;
  -webkit-user-select: none; /* Safari/Chrome for iOS */
  -moz-user-select: none; /* Firefox */
  -ms-user-select: none; /* IE10+/Edge */
  pointer-events: auto;
}

/* Arrows for horizontal Navigation Swiper */
.left-arrow-btn,
.right-arrow-btn {
  width: 40px;
  height: 40px;
  position: absolute;
  top: 50%;
  transform: translateY(-50%);
  z-index: 100;
  transition: opacity 0.3s;
  background-size: 20px 20px;
  background-position: center;
}

.left-arrow-btn {
  left: 9px;
  background-image: url(../assets/64x64_0021_left-arrow-white.png);
  background-position: calc(50% - 2px) center;
}

.right-arrow-btn {
  right: 9px;
  background-image: url("../assets/64x64_0022_right-arrow-white.png");
  background-position: calc(50% + 2px) center;
}

.active-opacity {
  opacity: 0.1 !important;
}

/* Custom arrows for vertical swiping for Vertical Swiper */
/* Style for the navigation buttons container */
.navigation-buttons {
  position: absolute;
  bottom: 12px;
  left: 50%;
  transform: translateX(-50%);
  z-index: 100;
  display: block;
}

/* Down Arrow for Swiper Vertical navigation */
.down-arrow-btn {
  width: 46px;
  height: 46px;
  transition: opacity 0.1s;
  background-size: 23px 23px;
  background-image: url("../assets/64x64_0022_down-arrow-white.png");
  background-position: center 58%;
  position: relative;
  top: 2px;
}
/* ... */

